                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.1.0


  *) [TS-2315] ESI Plugin: fetcher does not handle error gracefully.
   Author: Kit Chan.

  *) [TS-2115] buffer_upload hard-codes "nobody" user/group.
   Author: Kit Chan.

  *) [TS-2208] Cache control with multiple suffixes.
    Author: bettydramit <b13621367396@gmail.com>

  *) [TS-2247] ua close time in milestone may not set.
   Author: Gang Li

  *) [TS-2302] Log collation causes error logging to stop.

  *) [TS-2200] TS_HRTIME_xxx in experimental.h is invalid to use.
   Author: Yu Qing

  *) [TS-2235] url_print should NOT output "?" for empty query string.
   Author: Yu Qing

  *) [TS-2292] the version of records.config increases unexpectly.
   Author: Yu Qing

  *) [TS-2277] cluster alarm messages broadcast infinitely.
   Author: Yu Qing

  *) [TS-2276] manager memory leak in some case.
   Author: Yu Qing

  *) [TS-1638] less strict on kernel version checking in clustering.
   Author: Yu Qing

  *) [TS-2265] Remove unused log tags for prob, prcb and cgid.

  *) [TS-2301] Replace the CACHE_READY macro with CacheProcessor::IsCacheReady.

  *) [TS-2300] Remove the HIT_EVACUATE build option.

  *) [TS-2227] Allow for multiple config files for a header_rewrite plugin
   invocation (be it in remap.config or plugin.config).

  *) [TS-2230] header_rewrite should support the same hook-management that
  header_filter does for remap rules. This allows per-remap rules that
  triggers in hooks other than the remap phase.

  *) [TS-2228] Add a set-config operator for header_rewrite plugin.

  *) [TS-2226] Add a set-header operator for header_rewrite plugin.

  *) [TS-2296] improve ConfigProcessor reference counting.

  *) [ TS-2295] update statvfs usage.

  *) [TS-2139] Fix PURGE twice to remove object in cache if
   enable-interim-cache.

  *) [TS-2216] Fix cquuh log tag, which does not calculate the right
   string length.
